E_CLASSROOM-220 [Bugfix] Avatars in Students List is Not Showing (#77)
* E_CLASSROOM-220 [Bugfix] Avatars in Students List is Not Showing

* Rebased from develop

--- a/src/pages/student/students/StudentList/index.module.css
+++ b/src/pages/student/students/StudentList/index.module.css
@@ -1,16 +1,22 @@
-.listofstudenttext {
+.studentListContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 33px;
+}
+
+.studentListHeader {
   margin-bottom: 20px;
   font-weight: bold;
   font-size: 28px;
 }
 
-.CardHeaderstyle {
+.cardHeader {
   background-color: #e0eaec;
   filter: drop-shadow(0 1mm 1mm #48535b8c);
   display: flex;
 }
 
-.Dropdownstyle {
+.dropdownStyle {
   margin-left: 45px;
   background: white;
   border-radius: 2px;
@@ -23,34 +29,29 @@
   padding-bottom: 25px;
 }
 
-.Dropdownstyle:hover {
+.dropdownStyle:hover {
   color: black;
 }
 
-.Dropdownmenustyle {
+.dropdownMenuStyle {
   width: 84px;
 }
 
-.Dropdownitemstyle {
+.dropdownItemStyle {
   padding: 5px 0px 2px 11px;
-  width: 80px;
+  width: 82px;
   background-color: white;
 }
 
-.Dropdownitemstyle:focus {
+.dropdownItemStyle:focus {
   background-color: silver;
 }
 
-.Textfordropdownstyle {
+.dropdownLabel {
   color: #48535b;
 }
 
-.CardBodystyle {
-  width: 548px;
-  padding-top: 0px;
-}
-
-.inputstyle {
+.inputStyle {
   height: 32px;
   width: 400px;
   border-radius: 4px;
@@ -58,15 +59,15 @@
   padding-left: 10px;
 }
 
-.inputstyle:focus {
+.inputStyle:focus {
   outline-color: #adb8c4;
 }
 
-.inputstyle::placeholder {
+.inputStyle::placeholder {
   padding-left: 10px;
 }
 
-.iconsearchstyle {
+.searchIcon {
   width: 20px;
   height: 20px;
 }
@@ -80,18 +81,30 @@
   top: 12px;
 }
 
-.cal_02 {
+.cardBody {
   background-color: white;
   height: 640px;
   padding-top: 25px;
-}
-
-.cal_3 {
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
-.margineforspan {
+.studentInfo {
+  display: flex;
+  align-items: center;
+  margin-top: 13px;
+  margin-bottom: 55px;
+  margin-left: 17px;
+  height: 20px;
+}
+
+.avatar {
+  margin-right: 7px;
+  width: 38px;
+  height: 38px;
+}
+
+.studentName {
   color: #48535b;
   margin-left: 10px;
   font-size: 16px;
@@ -99,29 +112,18 @@
   cursor: pointer;
 }
 
-#floatrighttext {
-  font-size: 14px;
+#followCount {
   display: flex;
-  justify-content: space-between;
-  padding: 0px 240px 0px 0px;
-  text-indent: 55px;
-}
-
-.s_h3 {
-  margin-bottom: 0px;
-  margin-left: 17px;
-  height: 30px;
-}
-
-.followerstextindentstyle {
-  text-indent: 0px;
-  padding-right: 55px;
-  margin-bottom: 25px;
+  font-size: 14px;
+  gap: 20px;
+  text-indent: 10px;
 }
 
 .button {
   float: right;
   margin-right: 5px;
+  margin-left: auto;
+  margin-top: 13px;
   width: 80px;
   height: 28px;
   border: 1px solid rgba(0, 0, 0, 0.158);
